# kagami

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/kagami/: mod.rs
src/kagami/callbacks/: actions.rs  manager.rs  mod.rs  type_id_map.rs
src/minecraft/: mod.rs
src/minecraft/packets/: mod.rs
src/minecraft/packets/handshake/: client.rs
src/minecraft/packets/handshake/client/: legacy_server_list_ping.rs  set_protocol.rs
src/minecraft/packets/login/: client.rs  server.rs
src/minecraft/packets/login/client/: encryption_begin.rs  login_start.rs
src/minecraft/packets/login/server/: compress.rs  disconnect.rs  login_success.rs
src/minecraft/packets/play/: client.rs  server.rs
src/minecraft/packets/play/client/: arm_animation.rs  chat.rs  client_command.rs  close_window.rs  flying.rs  held_item_slot.rs  keep_alive.rs  look.rs  position.rs  position_and_look.rs  transaction.rs  use_entity.rs
src/minecraft/packets/play/server/: animation.rs  attach_entity.rs  bed.rs  chat.rs  collect.rs  entity.rs  entity_destroy.rs  entity_effect.rs  entity_head_rotation.rs  entity_look.rs  entity_metadata.rs  entity_move_look.rs  entity_relative_move.rs  entity_status.rs  entity_teleport.rs  entity_velocity.rs  held_item_slot.rs  keep_alive.rs  (+11 more)
src/minecraft/packets/status/: client.rs  server.rs
src/minecraft/registry/: mod.rs  potion_effects.rs
src/serialization/: deserializer.rs  entity_metadata.rs  fixed_point.rs  mod.rs  position.rs  serializer.rs  varint.rs
src/tcp/: connection.rs  context.rs  mod.rs  origin.rs  processor.rs  state.rs  stream.rs  utils.rs
(+4 files in other folders)
