[package]
name = "kagami"
version = "0.0.1"
authors = ["Oery"]
edition = "2021"
description = "A Minecraft network based modding interface"
repository = "https://github.com/oery/kagami"
keywords = ["minecraft", "modding", "network", "proxy"]
categories = ["game-development", "network-programming"]
license = "MIT"

[dependencies]
atomic_enum = "0.3.0"
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["full"] }
byteorder = "1.5.0"

# The macro is used to implement Packet traits
# and Deserialize / Serialize traits
# TODO: Make this easier to use
kagami_macro = { path = "../../Code/kagami_macro" }
